plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id "com.diffplug.spotless" version "6.25.0"
    id "org.sonarqube" version "7.3.1.8318"
}

group = 'net.ddns.adambravo79'
version = '2.1.0'

java {
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Cache
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'

    // SQLite
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'

    // Reactor (para async)
    implementation 'io.projectreactor:reactor-core:3.7.0'

    // FFmpeg wrapper
    implementation 'net.bramp.ffmpeg:ffmpeg:0.8.0'

    // ========== TELEGRAM (substituição) ==========
    implementation 'io.github.ksilisk:telegram-bot-spring-boot-starter:0.7.0'

    // (Opcional) Se precisar de modelos específicos, o starter já inclui o meta-client.
    // Mas para evitar ambiguidades, você pode forçar a versão:
    implementation 'org.telegram:telegrambots-meta:6.9.7.1'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

    // Testes
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testImplementation 'org.assertj:assertj-core'
}

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

// Spotless (configuração mantida)
tasks.withType(com.diffplug.gradle.spotless.SpotlessTask).configureEach {
    notCompatibleWithConfigurationCache("Spotless has compatibility issues with configuration cache")
}

// Configuração do SonarCloud
sonar {
    properties {
        property "sonar.projectKey", "andre-s-nascimento_t1000-bot"
        property "sonar.organization", "andre-s-nascimento"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.exclusions", "**/build/**,**/src/test/**"
        property "sonar.java.source", "21"
    }
}

tasks.withType(JavaCompile) {
    options.fork = true
    options.forkOptions.memoryMaximumSize = '256m'
}

jacoco {
    toolVersion = "0.8.11"
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                'net/ddns/adambravo79/tmill/client/**',
                'net/ddns/adambravo79/tmill/config/**',
                'net/ddns/adambravo79/tmill/TmillApplication*'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit { minimum = 0.40 }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

spotless {
    java {
        target 'src/**/*.java'
        googleJavaFormat('1.19.2').aosp().reflowLongStrings().formatJavadoc(false).reorderImports(false).groupArtifact('com.google.googlejavaformat:google-java-format') 
        removeUnusedImports()
        importOrder('java', 'javax', 'org', 'com', '')
        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named("check") {
    dependsOn("spotlessCheck")
}

tasks.named("sonar") {
    dependsOn("jacocoTestReport")
}